unpackaged/objects/lightningbuddy__Action_User_Preference__c.object
<CustomObject>
    <fields>
        <fullName>lightningbuddy__Action__c</fullName>
        <label>Action</label>
        <referenceTo>lightningbuddy__Actions__c</referenceTo>
        <relationshipLabel>Action User Preferences</relationshipLabel>
        <relationshipName>Action_User_Preferences</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>lightningbuddy__Dismissed_Date__c</fullName>
        <label>Dismissed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>lightningbuddy__Unique_Id__c</fullName>
        <externalId>true</externalId>
        <label>Unique Id</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>lightningbuddy__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Action_User_Preferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Action User Preference</label>
    <nameField>
        <displayFormat>GUPREF-{00000000}</displayFormat>
        <label>Action User Preference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action User Preferences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>